fix spacing buttton

--- a/components/home/introduction.module.css
+++ b/components/home/introduction.module.css
@@ -83,7 +83,7 @@
   }
 
   .nav {
-    margin-top: 15px;
+    margin-top: 10px;
     padding: 0px;
   }
 
